# Footowl_videoAi

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  models.py  settings.py  utils.py
app/agents/: nodes.py
app/graph/: __init__.py  pipeline.py  simple_graph.py
app/prompts/: composition.md  fix.md  intent.md  judge.md  script.md  storyboard.md  vision.md
app/rag/: __init__.py  seeds.py
app/remotion/: __init__.py  codegen.py
app/services/: ai_service.py  artifact_service.py  compiler_service.py  drive_service.py  embedding_service.py  input_adapter.py  llm_service.py  logging_service.py  prompt_loader.py  rendering_service.py  retrieval_service.py  vision_service.py
chroma_store/: chroma.sqlite3
chroma_store_runtime/: chroma.sqlite3
chroma_store_runtime/5ee36d932c/: chroma.sqlite3
chroma_store_runtime/68507a1ca8/: chroma.sqlite3
chroma_store_runtime/7f9afae2db/: chroma.sqlite3
chroma_store_runtime/a2c4927268/: chroma.sqlite3
chroma_store_runtime/abc33fd1aa/: chroma.sqlite3
chroma_store_runtime/cf176af674/: chroma.sqlite3
chroma_store_runtime/d85a01a33c/: chroma.sqlite3
sample_output/1650814ffd/: composition_spec.json  graph_trace.json  pipeline_state.json
sample_output/57a66f8bd4/: composition_spec.json  storyboard.json  video_intent.json
sample_output/624a90d194/: Composition.tsx  graph_trace.json  pipeline_state.json  storyboard.json
sample_output/latest/: Composition.tsx  compile_attempts.json  graph_trace.json  (+1 more)
scripts/: generate_sample_output.py
tests/: test_pipeline.py
ui/: streamlit_app.py
