[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fotovowl-reelgraph"
version = "0.1.0"
description = "FotoOwl ReelGraph take-home implementation"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pillow>=10.0",
  "numpy>=1.26",
  "opencv-python>=4.8",
  "langgraph>=1.0",
  "chromadb>=1.0",
  "openai>=2.0",
  "google-genai>=2.0",
  "streamlit>=1.40",
]

[project.scripts]
fotovowl = "app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
